src/objects/INT_TraduccionSistExt__mdt.object
<CustomObject>
    <description>Tabla de configuración para traducir valores de listas de selección intercambiadas con Sistemas Externos.</description>
    <fields>
        <fullName>Campo__c</fullName>
        <label>Campo</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CodigoIdioma__c</fullName>
        <defaultValue>&quot;2&quot;</defaultValue>
        <label>Código Idioma</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdSistemaExterno__c</fullName>
        <label>Id Sistema Externo</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objeto__c</fullName>
        <label>Objeto</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                    <default>true</default>
                    <label>Case</label>
                </value>
                <value>
                    <fullName>Perjudicado_Siniestro__c</fullName>
                </value>
                <value>
                    <fullName>Tipo_Producto_CIA__c</fullName>
                </value>
                <value>
                    <fullName>WorkOrder</fullName>
                </value>
                <value>
                    <fullName>WorkOrderLineItem</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ValorExterno__c</fullName>
        <label>Valor Externo</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValorSalesforce__c</fullName>
        <label>Valor Salesforce</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Integración: Traducción a Sistemas Ext.</label>
    <listViews>
        <fullName>Traducciones</fullName>
        <columns>MasterLabel</columns>
        <columns>Objeto__c</columns>
        <columns>Campo__c</columns>
        <columns>IdSistemaExterno__c</columns>
        <columns>CodigoIdioma__c</columns>
        <columns>ValorSalesforce__c</columns>
        <columns>ValorExterno__c</columns>
        <filterScope>Everything</filterScope>
        <label>Traducciones</label>
        <language>es</language>
    </listViews>
    <pluralLabel>Integración: Traducciones a Sistema Ext.</pluralLabel>
</CustomObject>